<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">UKA11 Program</string>
	<string name="calendar">Calendar</string>
	<string name="fullList">Alle arr.</string>
	<string name="select_category">Velg eventkategori</string>
	<string name="detailedEventFriendsbutton">Deltagende venner</string>
	<string name="submitSettingsbutton">Lagre</string>
	<string name="setting_prompt">Velg restriksjon</string>
	<string name="setting_menu_item">Innstillinger</string>
	
	<!-- Main menu section -->
	<string name="mainMenu_program">Program</string>
	<string name="mainMenu_news">Nyheter</string>
	<string name="mainMenu_places">Steder</string>
	
	<!-- Category naming section -->
	<string name="category_all">Alle</string>
	<string name="category_concert">Konsert</string>
	<string name="category_revue">Revy \u0026 Teater</string>
	<string name="category_lecture">Kurs \u0026 Events</string>
	<string name="category_party">Fest \u0026 Moro</string>
	<string name="category_favourites">Favoritter</string>
	
	<!-- Location list -->
	<string name="location_list_header">Steder</string>
	
	<!-- Calendar -->
	<string name="calendar_header">Kalender</string>
	<string name="dayGallery_all">Alle</string>
	
	<!-- CalendarActivity days -->
	<string name="calendar_monday">man</string>
	<string name="calendar_tuesday">tirs</string>
	<string name="calendar_wednesday">ons</string>
	<string name="calendar_thursday">tors</string>
	<string name="calendar_friday">fre</string>
	<string name="calendar_saturday">lør</string>
	<string name="calendar_sunday">søn</string>
	
	<!-- Facebook authentication -->
	<string name="facebookAuthentication_headerText">Facebook Login</string>
	<string name="facebookAuthentication_login">Login?</string>
	<string name="facebookAuthentication_logout">Logout?</string>
	<string name="facebookAuthentication_loggedOut">Logged out!</string>
		<string name="facebookAuthentication_loggedIn">Logged in!</string>
	
	<!-- Settings section -->
	<string name="settings_positionText">Posisjon:</string>
	<string name="settings_eventText">Arrangement:</string>
	<string name="settings_moneyText">Penger:</string>
	<string name="settings_mediaText">Media</string>
	<string name="settings_header">Instillinger</string>
	
	<!-- Toast section -->
	<string name="toast_isAddedAsFavourite">" lagt til som favoritt"</string>
	<string name="toast_isRemovedAsFavourite">" fjernet som favoritt"</string>
	
	<!-- Exception section -->
	<string name="exception_emptyBundle">Exception: empty bundle!</string>
	
	<!-- EventDetailedActivity strings -->
	<string name="eventDetailedActivity_agelimit" >"Aldersgrense: "</string>
	<string name="eventDetailedActivity_year">" år."</string>
	<string name="eventDetailedActivity_free">Gratis</string>
	
	<string name="tweet_list_header">Nyheter</string>
</resources>
